--- a/app/src/free/res/values/strings.xml
+++ b/app/src/free/res/values/strings.xml
@@ -1,1 +1,3 @@
-<resources></resources>
+<resources>
+    <string name="instructions">Press the button for a nerdy joke!\n-Free version-</string>
+</resources>
