remove ad related dependencies from the paid version of the app

--- a/app/src/free/res/values/strings.xml
+++ b/app/src/free/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="instructions">Press the button for a nerdy joke!\n-Free version-</string>
+    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
 </resources>
